# key-value-database

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: cursor.py  db.py  exc.py  indexer.py  parser.py  types.py  util.py
tests/: test_cursor.py  test_db.py  test_util.py
