[tool.poetry]
name = "key-value-database"
version = "0.1.0"
description = ""
authors = ["GulDilin <zhenyagurin@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "1.10.2"

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
isort = "5.10.1"
pytest = "7.2.0"
pre-commit = "2.20.0"
black = "22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
